添加交易日14:45计算买卖点(macd)

--- a/config/config.ini
+++ b/config/config.ini
@@ -2,7 +2,7 @@
 db_host                         = 127.0.0.1
 db                              = stock
 db_user                         = kylin
-db_passwd                       = xxxxxx
+db_passwd                       = 
 sql_table_basic_info            = basic_info 
 sql_table_quote                 = quote
 sql_table_selected              = selected
